// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (0) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(bun)",
      "end": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(--conditions <...>)",
      "serialized": "--conditions",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--conditions",
    },
  ],
  [
    "exit",
    {
      "command": "Command(bun)",
      "end": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(--conditions <...>)",
      "serialized": "--conditions",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--conditions",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 25,
        "offset": 24,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "development",
      "start": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "development",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 25,
        "offset": 24,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "development",
      "start": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "development",
    },
  ],
  [
    "enter",
    {
      "command": "Command(bun)",
      "end": {
        "line": 1,
        "column": 38,
        "offset": 37,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(--conditions <...>)",
      "serialized": "--conditions",
      "start": {
        "line": 1,
        "column": 26,
        "offset": 25,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--conditions",
    },
  ],
  [
    "exit",
    {
      "command": "Command(bun)",
      "end": {
        "line": 1,
        "column": 38,
        "offset": 37,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(--conditions <...>)",
      "serialized": "--conditions",
      "start": {
        "line": 1,
        "column": 26,
        "offset": 25,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--conditions",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 44,
        "offset": 43,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "serialized": "kronk",
      "start": {
        "line": 1,
        "column": 39,
        "offset": 38,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "kronk",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 44,
        "offset": 43,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "serialized": "kronk",
      "start": {
        "line": 1,
        "column": 39,
        "offset": 38,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "kronk",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 58,
        "offset": 57,
        "_index": 9,
        "_bufferIndex": -1,
      },
      "serialized": "./scratch.mts",
      "start": {
        "line": 1,
        "column": 45,
        "offset": 44,
        "_index": 8,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "./scratch.mts",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 58,
        "offset": 57,
        "_index": 9,
        "_bufferIndex": -1,
      },
      "serialized": "./scratch.mts",
      "start": {
        "line": 1,
        "column": 45,
        "offset": 44,
        "_index": 8,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "./scratch.mts",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (1) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 0,
        "_bufferIndex": 2,
      },
      "option": "Option(-M --max <n>)",
      "serialized": "-M",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-M",
    },
  ],
  [
    "exit",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 0,
        "_bufferIndex": 2,
      },
      "option": "Option(-M --max <n>)",
      "serialized": "-M",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-M",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "26",
      "start": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 0,
        "_bufferIndex": 3,
      },
      "type": "operand",
      "value": "26",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "26",
      "start": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 0,
        "_bufferIndex": 3,
      },
      "type": "operand",
      "value": "26",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "9",
      "start": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "9",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "9",
      "start": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "9",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (2) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 0,
        "_bufferIndex": 2,
      },
      "option": "Option(-M --max <n>)",
      "serialized": "-M",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-M",
    },
  ],
  [
    "exit",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 0,
        "_bufferIndex": 2,
      },
      "option": "Option(-M --max <n>)",
      "serialized": "-M",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-M",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "3",
      "start": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 0,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": "3",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "3",
      "start": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 0,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": "3",
    },
  ],
  [
    "enter",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "option": "Option(-m --min <n>)",
      "serialized": "-m",
      "short": true,
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-m",
    },
  ],
  [
    "exit",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "option": "Option(-m --min <n>)",
      "serialized": "-m",
      "short": true,
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-m",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "-1",
      "start": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": "-1",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "-1",
      "start": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": "-1",
    },
  ],
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "--",
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "delimiter",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "--",
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "delimiter",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "serialized": "-13",
      "start": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "-13",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "serialized": "-13",
      "start": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "-13",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (3) 1`] = `
[
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 2,
        "offset": 1,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "1",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "1",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 2,
        "offset": 1,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "1",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "1",
    },
  ],
  [
    "enter",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(-M --max <n>)",
      "serialized": "--max",
      "start": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--max",
    },
  ],
  [
    "exit",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(-M --max <n>)",
      "serialized": "--max",
      "start": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--max",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "26",
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "26",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "26",
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "26",
    },
  ],
  [
    "enter",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 6,
        "_bufferIndex": 5,
      },
      "long": true,
      "option": "Option(-m --min <n>)",
      "serialized": "--min",
      "start": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--min",
    },
  ],
  [
    "exit",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 6,
        "_bufferIndex": 5,
      },
      "long": true,
      "option": "Option(-m --min <n>)",
      "serialized": "--min",
      "start": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--min",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 20,
        "offset": 19,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "serialized": "13",
      "start": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 6,
        "_bufferIndex": 6,
      },
      "type": "operand",
      "value": "13",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 20,
        "offset": 19,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "serialized": "13",
      "start": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 6,
        "_bufferIndex": 6,
      },
      "type": "operand",
      "value": "13",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (4) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "clamp",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "clamp",
    },
  ],
  [
    "exit",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "clamp",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "clamp",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "3",
      "start": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "3",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "3",
      "start": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "3",
    },
  ],
  [
    "enter",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(-M --max <n>)",
      "serialized": "--max",
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--max",
    },
  ],
  [
    "exit",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(-M --max <n>)",
      "serialized": "--max",
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--max",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "serialized": "13",
      "start": {
        "line": 1,
        "column": 15,
        "offset": 14,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "13",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "serialized": "13",
      "start": {
        "line": 1,
        "column": 15,
        "offset": 14,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "13",
    },
  ],
  [
    "enter",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 23,
        "offset": 22,
        "_index": 8,
        "_bufferIndex": 5,
      },
      "long": true,
      "option": "Option(-m --min <n>)",
      "serialized": "--min",
      "start": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 8,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--min",
    },
  ],
  [
    "exit",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 23,
        "offset": 22,
        "_index": 8,
        "_bufferIndex": 5,
      },
      "long": true,
      "option": "Option(-m --min <n>)",
      "serialized": "--min",
      "start": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 8,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--min",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 24,
        "offset": 23,
        "_index": 9,
        "_bufferIndex": -1,
      },
      "serialized": "",
      "start": {
        "line": 1,
        "column": 24,
        "offset": 23,
        "_index": 8,
        "_bufferIndex": 6,
      },
      "type": "operand",
      "value": "",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 24,
        "offset": 23,
        "_index": 9,
        "_bufferIndex": -1,
      },
      "serialized": "",
      "start": {
        "line": 1,
        "column": 24,
        "offset": 23,
        "_index": 8,
        "_bufferIndex": 6,
      },
      "type": "operand",
      "value": "",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (5) 1`] = `[]`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (6) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "grease",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "grease",
    },
  ],
  [
    "exit",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "grease",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "grease",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (7) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "grease",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "grease",
    },
  ],
  [
    "exit",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "grease",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "grease",
    },
  ],
  [
    "enter",
    {
      "command": "Command(bump)",
      "end": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "bump",
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "bump",
    },
  ],
  [
    "exit",
    {
      "command": "Command(bump)",
      "end": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "bump",
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "bump",
    },
  ],
  [
    "enter",
    {
      "command": "Command(recommend)",
      "end": {
        "line": 1,
        "column": 22,
        "offset": 21,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "recommend",
      "start": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "recommend",
    },
  ],
  [
    "exit",
    {
      "command": "Command(recommend)",
      "end": {
        "line": 1,
        "column": 22,
        "offset": 21,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "recommend",
      "start": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "recommend",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (8) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(bump)",
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "bump",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "bump",
    },
  ],
  [
    "exit",
    {
      "command": "Command(bump)",
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "bump",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "bump",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "major",
      "start": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "major",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "major",
      "start": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "major",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 24,
        "offset": 23,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "package.json",
      "start": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "package.json",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 24,
        "offset": 23,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "package.json",
      "start": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "package.json",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 38,
        "offset": 37,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "serialized": "versions.json",
      "start": {
        "line": 1,
        "column": 25,
        "offset": 24,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "versions.json",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 38,
        "offset": 37,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "serialized": "versions.json",
      "start": {
        "line": 1,
        "column": 25,
        "offset": 24,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "versions.json",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (9) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "grease",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "grease",
    },
  ],
  [
    "exit",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "grease",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "grease",
    },
  ],
  [
    "enter",
    {
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "changelog",
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "changelog",
    },
  ],
  [
    "exit",
    {
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "changelog",
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "changelog",
    },
  ],
  [
    "enter",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 20,
        "offset": 19,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "global": true,
      "option": "Option(-w, --write)",
      "serialized": "-w",
      "short": true,
      "start": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-w",
    },
  ],
  [
    "exit",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 20,
        "offset": 19,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "global": true,
      "option": "Option(-w, --write)",
      "serialized": "-w",
      "short": true,
      "start": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-w",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 21,
        "offset": 20,
        "_index": 4,
        "_bufferIndex": 3,
      },
      "global": true,
      "option": "Option(-o, --outfile <path>)",
      "serialized": "o",
      "short": true,
      "start": {
        "line": 1,
        "column": 20,
        "offset": 19,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "type": "flag",
      "value": "-o",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 21,
        "offset": 20,
        "_index": 4,
        "_bufferIndex": 3,
      },
      "global": true,
      "option": "Option(-o, --outfile <path>)",
      "serialized": "o",
      "short": true,
      "start": {
        "line": 1,
        "column": 20,
        "offset": 19,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "type": "flag",
      "value": "-o",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 32,
        "offset": 31,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "$NOTES_FILE",
      "start": {
        "line": 1,
        "column": 21,
        "offset": 20,
        "_index": 4,
        "_bufferIndex": 3,
      },
      "type": "operand",
      "value": "$NOTES_FILE",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 32,
        "offset": 31,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "$NOTES_FILE",
      "start": {
        "line": 1,
        "column": 21,
        "offset": 20,
        "_index": 4,
        "_bufferIndex": 3,
      },
      "type": "operand",
      "value": "$NOTES_FILE",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (10) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "changelog",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "changelog",
    },
  ],
  [
    "exit",
    {
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "changelog",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "changelog",
    },
  ],
  [
    "enter",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "global": true,
      "option": "Option(-n, --dry [choice])",
      "serialized": "-n",
      "short": true,
      "start": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-n",
    },
  ],
  [
    "exit",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "global": true,
      "option": "Option(-n, --dry [choice])",
      "serialized": "-n",
      "short": true,
      "start": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-n",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": 3,
      },
      "global": true,
      "option": "Option(-s, --samefile [choice])",
      "serialized": "s",
      "short": true,
      "start": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "type": "flag",
      "value": "-s",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": 3,
      },
      "global": true,
      "option": "Option(-s, --samefile [choice])",
      "serialized": "s",
      "short": true,
      "start": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "type": "flag",
      "value": "-s",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": 4,
      },
      "global": true,
      "option": "Option(-w, --write)",
      "serialized": "w",
      "short": true,
      "start": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": 3,
      },
      "type": "flag",
      "value": "-w",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": 4,
      },
      "global": true,
      "option": "Option(-w, --write)",
      "serialized": "w",
      "short": true,
      "start": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": 3,
      },
      "type": "flag",
      "value": "-w",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (11) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "changelog",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "changelog",
    },
  ],
  [
    "exit",
    {
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "changelog",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "changelog",
    },
  ],
  [
    "enter",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "global": true,
      "option": "Option(-n, --dry [choice])",
      "serialized": "-n",
      "short": true,
      "start": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-n",
    },
  ],
  [
    "exit",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "global": true,
      "option": "Option(-n, --dry [choice])",
      "serialized": "-n",
      "short": true,
      "start": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-n",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": 3,
      },
      "global": true,
      "option": "Option(-s, --samefile [choice])",
      "serialized": "s",
      "short": true,
      "start": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "type": "flag",
      "value": "-s",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": 3,
      },
      "global": true,
      "option": "Option(-s, --samefile [choice])",
      "serialized": "s",
      "short": true,
      "start": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "type": "flag",
      "value": "-s",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": 4,
      },
      "global": true,
      "option": "Option(-w, --write)",
      "serialized": "w",
      "short": true,
      "start": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": 3,
      },
      "type": "flag",
      "value": "-w",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": 4,
      },
      "global": true,
      "option": "Option(-w, --write)",
      "serialized": "w",
      "short": true,
      "start": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": 3,
      },
      "type": "flag",
      "value": "-w",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "1",
      "start": {
        "line": 1,
        "column": 15,
        "offset": 14,
        "_index": 2,
        "_bufferIndex": 4,
      },
      "type": "operand",
      "value": "1",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "1",
      "start": {
        "line": 1,
        "column": 15,
        "offset": 14,
        "_index": 2,
        "_bufferIndex": 4,
      },
      "type": "operand",
      "value": "1",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (12) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "changelog",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "changelog",
    },
  ],
  [
    "exit",
    {
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "changelog",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "changelog",
    },
  ],
  [
    "enter",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "global": true,
      "option": "Option(-w, --write)",
      "serialized": "-w",
      "short": true,
      "start": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-w",
    },
  ],
  [
    "exit",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "global": true,
      "option": "Option(-w, --write)",
      "serialized": "-w",
      "short": true,
      "start": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-w",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": 3,
      },
      "global": true,
      "option": "Option(-r, --releases <count>)",
      "serialized": "r",
      "short": true,
      "start": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "type": "flag",
      "value": "-r",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": 3,
      },
      "global": true,
      "option": "Option(-r, --releases <count>)",
      "serialized": "r",
      "short": true,
      "start": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "type": "flag",
      "value": "-r",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "0",
      "start": {
        "line": 1,
        "column": 15,
        "offset": 14,
        "_index": 2,
        "_bufferIndex": 4,
      },
      "type": "operand",
      "value": "0",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "0",
      "start": {
        "line": 1,
        "column": 15,
        "offset": 14,
        "_index": 2,
        "_bufferIndex": 4,
      },
      "type": "operand",
      "value": "0",
    },
  ],
  [
    "enter",
    {
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 19,
        "offset": 18,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "option": "Option(-t, --to <commitish>)",
      "serialized": "-t",
      "short": true,
      "start": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-t",
    },
  ],
  [
    "exit",
    {
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 19,
        "offset": 18,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "option": "Option(-t, --to <commitish>)",
      "serialized": "-t",
      "short": true,
      "start": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-t",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 49,
        "offset": 48,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "$(jq .version package.json -r)",
      "start": {
        "line": 1,
        "column": 19,
        "offset": 18,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": "$(jq .version package.json -r)",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 49,
        "offset": 48,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "$(jq .version package.json -r)",
      "start": {
        "line": 1,
        "column": 19,
        "offset": 18,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": "$(jq .version package.json -r)",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (13) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(dist-tag)",
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "dist-tag",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "dist-tag",
    },
  ],
  [
    "exit",
    {
      "command": "Command(dist-tag)",
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "dist-tag",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "dist-tag",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 31,
        "offset": 30,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "grease@3.0.0-alpha.10",
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "grease@3.0.0-alpha.10",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 31,
        "offset": 30,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "grease@3.0.0-alpha.10",
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "grease@3.0.0-alpha.10",
    },
  ],
  [
    "enter",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 44,
        "offset": 43,
        "_index": 4,
        "_bufferIndex": 12,
      },
      "global": true,
      "long": true,
      "option": "Option(-T, --tag-prefix <prefix>)",
      "serialized": "--tag-prefix",
      "start": {
        "line": 1,
        "column": 32,
        "offset": 31,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--tag-prefix",
    },
  ],
  [
    "exit",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 44,
        "offset": 43,
        "_index": 4,
        "_bufferIndex": 12,
      },
      "global": true,
      "long": true,
      "option": "Option(-T, --tag-prefix <prefix>)",
      "serialized": "--tag-prefix",
      "start": {
        "line": 1,
        "column": 32,
        "offset": 31,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--tag-prefix",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 52,
        "offset": 51,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "grease@",
      "start": {
        "line": 1,
        "column": 45,
        "offset": 44,
        "_index": 4,
        "_bufferIndex": 13,
      },
      "type": "operand",
      "value": "grease@",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 52,
        "offset": 51,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "grease@",
      "start": {
        "line": 1,
        "column": 45,
        "offset": 44,
        "_index": 4,
        "_bufferIndex": 13,
      },
      "type": "operand",
      "value": "grease@",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (14) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(info)",
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "info",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "info",
    },
  ],
  [
    "exit",
    {
      "command": "Command(info)",
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "info",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "info",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (15) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(manifest)",
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "manifest",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "manifest",
    },
  ],
  [
    "exit",
    {
      "command": "Command(manifest)",
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "manifest",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "manifest",
    },
  ],
  [
    "enter",
    {
      "command": "Command(get)",
      "end": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "get",
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "get",
    },
  ],
  [
    "exit",
    {
      "command": "Command(get)",
      "end": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "get",
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "get",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "name",
      "start": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "name",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "name",
      "start": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "name",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (16) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(manifest)",
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "manifest",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "manifest",
    },
  ],
  [
    "exit",
    {
      "command": "Command(manifest)",
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "manifest",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "manifest",
    },
  ],
  [
    "enter",
    {
      "command": "Command(set)",
      "end": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "set",
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "set",
    },
  ],
  [
    "exit",
    {
      "command": "Command(set)",
      "end": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "set",
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "set",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 36,
        "offset": 35,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "version=3.0.0-alpha.10",
      "start": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "version=3.0.0-alpha.10",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 36,
        "offset": 35,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "version=3.0.0-alpha.10",
      "start": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "version=3.0.0-alpha.10",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 87,
        "offset": 86,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "serialized": "git.build=3b5ceacd4ea35b4cebefa1b9b8aca93b9cccaae4",
      "start": {
        "line": 1,
        "column": 37,
        "offset": 36,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "git.build=3b5ceacd4ea35b4cebefa1b9b8aca93b9cccaae4",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 87,
        "offset": 86,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "serialized": "git.build=3b5ceacd4ea35b4cebefa1b9b8aca93b9cccaae4",
      "start": {
        "line": 1,
        "column": 37,
        "offset": 36,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "git.build=3b5ceacd4ea35b4cebefa1b9b8aca93b9cccaae4",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (17) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "grease",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "grease",
    },
  ],
  [
    "exit",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "grease",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "grease",
    },
  ],
  [
    "enter",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "option": "Option(-n, --dry [choice])",
      "serialized": "-n",
      "short": true,
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-n",
    },
  ],
  [
    "exit",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "option": "Option(-n, --dry [choice])",
      "serialized": "-n",
      "short": true,
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-n",
    },
  ],
  [
    "enter",
    {
      "command": "Command(pack)",
      "end": {
        "line": 1,
        "column": 15,
        "offset": 14,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "pack",
      "start": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "pack",
    },
  ],
  [
    "exit",
    {
      "command": "Command(pack)",
      "end": {
        "line": 1,
        "column": 15,
        "offset": 14,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "pack",
      "start": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "pack",
    },
  ],
  [
    "enter",
    {
      "command": "Command(pack)",
      "end": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "option": "Option(-o, --out <outfile>)",
      "serialized": "-o",
      "short": true,
      "start": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-o",
    },
  ],
  [
    "exit",
    {
      "command": "Command(pack)",
      "end": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "option": "Option(-o, --out <outfile>)",
      "serialized": "-o",
      "short": true,
      "start": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-o",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 28,
        "offset": 27,
        "_index": 9,
        "_bufferIndex": -1,
      },
      "serialized": "%s-%v.tgz",
      "start": {
        "line": 1,
        "column": 19,
        "offset": 18,
        "_index": 8,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "%s-%v.tgz",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 28,
        "offset": 27,
        "_index": 9,
        "_bufferIndex": -1,
      },
      "serialized": "%s-%v.tgz",
      "start": {
        "line": 1,
        "column": 19,
        "offset": 18,
        "_index": 8,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "%s-%v.tgz",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (18) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(tag)",
      "end": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "tag",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "tag",
    },
  ],
  [
    "exit",
    {
      "command": "Command(tag)",
      "end": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "tag",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "tag",
    },
  ],
  [
    "enter",
    {
      "command": "Command(create)",
      "end": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "create",
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "create",
    },
  ],
  [
    "exit",
    {
      "command": "Command(create)",
      "end": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "create",
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "create",
    },
  ],
  [
    "enter",
    {
      "command": "Command(create)",
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "option": "Option(-p, --push)",
      "serialized": "-p",
      "short": true,
      "start": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-p",
    },
  ],
  [
    "exit",
    {
      "command": "Command(create)",
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "option": "Option(-p, --push)",
      "serialized": "-p",
      "short": true,
      "start": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-p",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "command": "Command(create)",
      "end": {
        "line": 1,
        "column": 15,
        "offset": 14,
        "_index": 4,
        "_bufferIndex": 3,
      },
      "option": "Option(-s, --sign [opt])",
      "serialized": "s",
      "short": true,
      "start": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "type": "flag",
      "value": "-s",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "command": "Command(create)",
      "end": {
        "line": 1,
        "column": 15,
        "offset": 14,
        "_index": 4,
        "_bufferIndex": 3,
      },
      "option": "Option(-s, --sign [opt])",
      "serialized": "s",
      "short": true,
      "start": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "type": "flag",
      "value": "-s",
    },
  ],
  [
    "enter",
    {
      "command": "Command(create)",
      "end": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 6,
        "_bufferIndex": 2,
      },
      "option": "Option(-m, --message <msg>)",
      "serialized": "-m",
      "short": true,
      "start": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-m",
    },
  ],
  [
    "exit",
    {
      "command": "Command(create)",
      "end": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 6,
        "_bufferIndex": 2,
      },
      "option": "Option(-m, --message <msg>)",
      "serialized": "-m",
      "short": true,
      "start": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-m",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 33,
        "offset": 32,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "serialized": "release: {tag}",
      "start": {
        "line": 1,
        "column": 19,
        "offset": 18,
        "_index": 6,
        "_bufferIndex": 3,
      },
      "type": "operand",
      "value": "release: {tag}",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 33,
        "offset": 32,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "serialized": "release: {tag}",
      "start": {
        "line": 1,
        "column": 19,
        "offset": 18,
        "_index": 6,
        "_bufferIndex": 3,
      },
      "type": "operand",
      "value": "release: {tag}",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 48,
        "offset": 47,
        "_index": 9,
        "_bufferIndex": -1,
      },
      "serialized": "3.0.0-alpha.10",
      "start": {
        "line": 1,
        "column": 34,
        "offset": 33,
        "_index": 8,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "3.0.0-alpha.10",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 48,
        "offset": 47,
        "_index": 9,
        "_bufferIndex": -1,
      },
      "serialized": "3.0.0-alpha.10",
      "start": {
        "line": 1,
        "column": 34,
        "offset": 33,
        "_index": 8,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "3.0.0-alpha.10",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (19) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(bump)",
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "version",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "version",
    },
  ],
  [
    "exit",
    {
      "command": "Command(bump)",
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "version",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "version",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 22,
        "offset": 21,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "1.0.0-alpha.1",
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "1.0.0-alpha.1",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 22,
        "offset": 21,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "1.0.0-alpha.1",
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "1.0.0-alpha.1",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (20) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(mlly)",
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "mlly",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "mlly",
    },
  ],
  [
    "exit",
    {
      "command": "Command(mlly)",
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "mlly",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "mlly",
    },
  ],
  [
    "enter",
    {
      "command": "Command(mlly)",
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "option": "Option(-p | --parent <!>)",
      "serialized": "-p",
      "short": true,
      "start": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-p",
    },
  ],
  [
    "exit",
    {
      "command": "Command(mlly)",
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "option": "Option(-p | --parent <!>)",
      "serialized": "-p",
      "short": true,
      "start": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-p",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": ".",
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": ".",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": ".",
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": ".",
    },
  ],
  [
    "enter",
    {
      "command": "Command(resolve)",
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "resolve",
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "resolve",
    },
  ],
  [
    "exit",
    {
      "command": "Command(resolve)",
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "resolve",
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "resolve",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 30,
        "offset": 29,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "serialized": "#lib/command",
      "start": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "#lib/command",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 30,
        "offset": 29,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "serialized": "#lib/command",
      "start": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "#lib/command",
    },
  ],
  [
    "enter",
    {
      "command": "Command(resolve)",
      "end": {
        "line": 1,
        "column": 33,
        "offset": 32,
        "_index": 8,
        "_bufferIndex": 2,
      },
      "option": "Option(-c | --conditions <...>)",
      "serialized": "-c",
      "short": true,
      "start": {
        "line": 1,
        "column": 31,
        "offset": 30,
        "_index": 8,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-c",
    },
  ],
  [
    "exit",
    {
      "command": "Command(resolve)",
      "end": {
        "line": 1,
        "column": 33,
        "offset": 32,
        "_index": 8,
        "_bufferIndex": 2,
      },
      "option": "Option(-c | --conditions <...>)",
      "serialized": "-c",
      "short": true,
      "start": {
        "line": 1,
        "column": 31,
        "offset": 30,
        "_index": 8,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-c",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 37,
        "offset": 36,
        "_index": 9,
        "_bufferIndex": -1,
      },
      "serialized": "node",
      "start": {
        "line": 1,
        "column": 33,
        "offset": 32,
        "_index": 8,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": "node",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 37,
        "offset": 36,
        "_index": 9,
        "_bufferIndex": -1,
      },
      "serialized": "node",
      "start": {
        "line": 1,
        "column": 33,
        "offset": 32,
        "_index": 8,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": "node",
    },
  ],
  [
    "enter",
    {
      "command": "Command(resolve)",
      "end": {
        "line": 1,
        "column": 40,
        "offset": 39,
        "_index": 10,
        "_bufferIndex": 2,
      },
      "option": "Option(-c | --conditions <...>)",
      "serialized": "-c",
      "short": true,
      "start": {
        "line": 1,
        "column": 38,
        "offset": 37,
        "_index": 10,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-c",
    },
  ],
  [
    "exit",
    {
      "command": "Command(resolve)",
      "end": {
        "line": 1,
        "column": 40,
        "offset": 39,
        "_index": 10,
        "_bufferIndex": 2,
      },
      "option": "Option(-c | --conditions <...>)",
      "serialized": "-c",
      "short": true,
      "start": {
        "line": 1,
        "column": 38,
        "offset": 37,
        "_index": 10,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-c",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 46,
        "offset": 45,
        "_index": 11,
        "_bufferIndex": -1,
      },
      "serialized": "kronk",
      "start": {
        "line": 1,
        "column": 41,
        "offset": 40,
        "_index": 10,
        "_bufferIndex": 3,
      },
      "type": "operand",
      "value": "kronk",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 46,
        "offset": 45,
        "_index": 11,
        "_bufferIndex": -1,
      },
      "serialized": "kronk",
      "start": {
        "line": 1,
        "column": 41,
        "offset": 40,
        "_index": 10,
        "_bufferIndex": 3,
      },
      "type": "operand",
      "value": "kronk",
    },
  ],
  [
    "enter",
    {
      "command": "Command(resolve)",
      "end": {
        "line": 1,
        "column": 51,
        "offset": 50,
        "_index": 13,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(--ps | --preserve-symlinks)",
      "serialized": "--ps",
      "start": {
        "line": 1,
        "column": 47,
        "offset": 46,
        "_index": 12,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--ps",
    },
  ],
  [
    "exit",
    {
      "command": "Command(resolve)",
      "end": {
        "line": 1,
        "column": 51,
        "offset": 50,
        "_index": 13,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(--ps | --preserve-symlinks)",
      "serialized": "--ps",
      "start": {
        "line": 1,
        "column": 47,
        "offset": 46,
        "_index": 12,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--ps",
    },
  ],
  [
    "enter",
    {
      "command": "Command(resolve)",
      "end": {
        "line": 1,
        "column": 64,
        "offset": 63,
        "_index": 15,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(-c | --conditions <...>)",
      "serialized": "--conditions",
      "start": {
        "line": 1,
        "column": 52,
        "offset": 51,
        "_index": 14,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--conditions",
    },
  ],
  [
    "exit",
    {
      "command": "Command(resolve)",
      "end": {
        "line": 1,
        "column": 64,
        "offset": 63,
        "_index": 15,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(-c | --conditions <...>)",
      "serialized": "--conditions",
      "start": {
        "line": 1,
        "column": 52,
        "offset": 51,
        "_index": 14,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--conditions",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 76,
        "offset": 75,
        "_index": 17,
        "_bufferIndex": -1,
      },
      "serialized": "development",
      "start": {
        "line": 1,
        "column": 65,
        "offset": 64,
        "_index": 16,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "development",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 76,
        "offset": 75,
        "_index": 17,
        "_bufferIndex": -1,
      },
      "serialized": "development",
      "start": {
        "line": 1,
        "column": 65,
        "offset": 64,
        "_index": 16,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "development",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (21) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(resolve)",
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "resolve",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "resolve",
    },
  ],
  [
    "exit",
    {
      "command": "Command(resolve)",
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "resolve",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "resolve",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 31,
        "offset": 30,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "#internal/flag-resolve",
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "#internal/flag-resolve",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 31,
        "offset": 30,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "#internal/flag-resolve",
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "#internal/flag-resolve",
    },
  ],
  [
    "enter",
    {
      "command": "Command(mlly)",
      "end": {
        "line": 1,
        "column": 40,
        "offset": 39,
        "_index": 4,
        "_bufferIndex": 8,
      },
      "global": true,
      "long": true,
      "option": "Option(-p | --parent <!>)",
      "serialized": "--parent",
      "start": {
        "line": 1,
        "column": 32,
        "offset": 31,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--parent",
    },
  ],
  [
    "exit",
    {
      "command": "Command(mlly)",
      "end": {
        "line": 1,
        "column": 40,
        "offset": 39,
        "_index": 4,
        "_bufferIndex": 8,
      },
      "global": true,
      "long": true,
      "option": "Option(-p | --parent <!>)",
      "serialized": "--parent",
      "start": {
        "line": 1,
        "column": 32,
        "offset": 31,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--parent",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 42,
        "offset": 41,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": ".",
      "start": {
        "line": 1,
        "column": 41,
        "offset": 40,
        "_index": 4,
        "_bufferIndex": 9,
      },
      "type": "operand",
      "value": ".",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 42,
        "offset": 41,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": ".",
      "start": {
        "line": 1,
        "column": 41,
        "offset": 40,
        "_index": 4,
        "_bufferIndex": 9,
      },
      "type": "operand",
      "value": ".",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (22) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(satisfies)",
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "satisfies",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "satisfies",
    },
  ],
  [
    "exit",
    {
      "command": "Command(satisfies)",
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "satisfies",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "satisfies",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "1.2.3",
      "start": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "1.2.3",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "1.2.3",
      "start": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "1.2.3",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 48,
        "offset": 47,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "1.x || >=2.5.0 || 5.0.0 - 7.2.3",
      "start": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "1.x || >=2.5.0 || 5.0.0 - 7.2.3",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 48,
        "offset": 47,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "1.x || >=2.5.0 || 5.0.0 - 7.2.3",
      "start": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "1.x || >=2.5.0 || 5.0.0 - 7.2.3",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (23) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(satisfies)",
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "satisfies",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "satisfies",
    },
  ],
  [
    "exit",
    {
      "command": "Command(satisfies)",
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "satisfies",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "satisfies",
    },
  ],
  [
    "enter",
    {
      "command": "Command(max)",
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "max",
      "start": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "max",
    },
  ],
  [
    "exit",
    {
      "command": "Command(max)",
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "max",
      "start": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "max",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 33,
        "offset": 32,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "1.x || 2.0.0 - 4.x",
      "start": {
        "line": 1,
        "column": 15,
        "offset": 14,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "1.x || 2.0.0 - 4.x",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 33,
        "offset": 32,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "1.x || 2.0.0 - 4.x",
      "start": {
        "line": 1,
        "column": 15,
        "offset": 14,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "1.x || 2.0.0 - 4.x",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 40,
        "offset": 39,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "serialized": "1.22.0",
      "start": {
        "line": 1,
        "column": 34,
        "offset": 33,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "1.22.0",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 40,
        "offset": 39,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "serialized": "1.22.0",
      "start": {
        "line": 1,
        "column": 34,
        "offset": 33,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "1.22.0",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 48,
        "offset": 47,
        "_index": 9,
        "_bufferIndex": -1,
      },
      "serialized": "3.13.98",
      "start": {
        "line": 1,
        "column": 41,
        "offset": 40,
        "_index": 8,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "3.13.98",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 48,
        "offset": 47,
        "_index": 9,
        "_bufferIndex": -1,
      },
      "serialized": "3.13.98",
      "start": {
        "line": 1,
        "column": 41,
        "offset": 40,
        "_index": 8,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "3.13.98",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 56,
        "offset": 55,
        "_index": 11,
        "_bufferIndex": -1,
      },
      "serialized": "4.27.73",
      "start": {
        "line": 1,
        "column": 49,
        "offset": 48,
        "_index": 10,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "4.27.73",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 56,
        "offset": 55,
        "_index": 11,
        "_bufferIndex": -1,
      },
      "serialized": "4.27.73",
      "start": {
        "line": 1,
        "column": 49,
        "offset": 48,
        "_index": 10,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "4.27.73",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (24) 1`] = `
[
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 2,
        "offset": 1,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "2",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "2",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 2,
        "offset": 1,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "2",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "2",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "2",
      "start": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "2",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "serialized": "2",
      "start": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "2",
    },
  ],
  [
    "enter",
    {
      "command": "Command(tribonacci)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "option": "Option(-n <!>)",
      "serialized": "-n",
      "short": true,
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-n",
    },
  ],
  [
    "exit",
    {
      "command": "Command(tribonacci)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "option": "Option(-n <!>)",
      "serialized": "-n",
      "short": true,
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-n",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "13",
      "start": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": "13",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "13",
      "start": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": "13",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "serialized": "3",
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "3",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "serialized": "3",
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "3",
    },
  ],
]
`;
